--- a/task6/index.html
+++ b/task6/index.html
@@ -10,18 +10,20 @@
 <body>
     <div class="container">
         <header>
-            <h1>Fjaliraven</h1>
-            <p class="subtitle">Men's Clothing Collection</p>
+            <h1>Men's Clothing Collection</h1>
+            <p class="subtitle">online-Men-Shopping</p>
         </header>
         
         <div class="products-grid">
 
             <div class="product-card">
                 <div class="product-image">
-                    <div class="product-image-placeholder">👔</div>
+                    <div class="product-image-placeholder">
+                        <div><img src=" ./New folder/OIP5.jpg" alt="Fjaliraven"></div>
+                    </div>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Fjaliraven</h3>
+                    <h3 class="product-title">Mens Cotton</h3>
                     <p class="product-category">Men's Clothing</p>
                     <p class="product-price">109.95 $</p>
                     <div class="product-rating">
@@ -33,7 +35,9 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <div class="product-image-placeholder">🧥</div>
+                    <div class="product-image-placeholder">
+                        <img src="./New folder/OIP.webp" alt="Mens Casual">
+                    </div>
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Mens Casual</h3>
@@ -62,10 +66,79 @@
                     <button class="btn-details">Show Details</button>
                 </div>
             </div>
-
+             <div class="product-card">
+                <div class="product-image">
+                    <div class="product-image-placeholder">
+                        <div><img src=" ./New folder/OIP5.jpg" alt="Fjaliraven"></div>
+                    </div>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Mens Cotton</h3>
+                    <p class="product-category">Men's Clothing</p>
+                    <p class="product-price">109.95 $</p>
+                    <div class="product-rating">
+                        <div class="stars">★★★★☆</div>
+                        <span class="rating-value">3.9</span>
+                    </div>
+                    <button class="btn-details">Show Details</button>
+                </div>
+            </div>
+             <div class="product-card">
+                <div class="product-image">
+                    <div class="product-image-placeholder">
+                        <div><img src=" ./New folder/OIP5.jpg" alt="Fjaliraven"></div>
+                    </div>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Mens Cotton</h3>
+                    <p class="product-category">Men's Clothing</p>
+                    <p class="product-price">109.95 $</p>
+                    <div class="product-rating">
+                        <div class="stars">★★★★☆</div>
+                        <span class="rating-value">3.9</span>
+                    </div>
+                    <button class="btn-details">Show Details</button>
+                </div>
+            </div>
+             <div class="product-card">
+                <div class="product-image">
+                    <div class="product-image-placeholder">
+                        <div><img src="./New folder/th4.jpg"></div>
+                    </div>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Mens Cotton</h3>
+                    <p class="product-category">Men's Clothing</p>
+                    <p class="product-price">109.95 $</p>
+                    <div class="product-rating">
+                        <div class="stars">★★★★☆</div>
+                        <span class="rating-value">3.9</span>
+                    </div>
+                    <button class="btn-details">Show Details</button>
+                </div>
+            </div>
+             <div class="product-card">
+                <div class="product-image">
+                    <div class="product-image-placeholder">
+                        <div><img src=" ./New folder/OIP5.jpg" alt="Fjaliraven"></div>
+                    </div>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Mens Cotton</h3>
+                    <p class="product-category">Men's Clothing</p>
+                    <p class="product-price">109.95 $</p>
+                    <div class="product-rating">
+                        <div class="stars">★★★★☆</div>
+                        <span class="rating-value">3.9</span>
+                    </div>
+                    <button class="btn-details">Show Details</button>
+                </div>
+            </div>
             <div class="product-card">
                 <div class="product-image">
-                    <div class="product-image-placeholder">🩳</div>
+                    <div class="product-image-placeholder">
+                        <div><img src="./New folder/th.webp"></div>
+                    </div>
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Mens Casual</h3>
