--- a/task6/index.html
+++ b/task6/index.html
@@ -13,149 +13,55 @@
             <h1>Men's Clothing Collection</h1>
             <p class="subtitle">online-Men-Shopping</p>
         </header>
-        
-        <div class="products-grid">
+        <div class="product-grid-container">
+    <div class="product-card">
+        <img src="./New folder/th4.jpg" alt="Fjallraven Bag">
+        <div class="product-info">
+            <h3>Sutis</h3>
+            <p class="category">men's clothing</p>
+            <p class="price">109.95 $</p>
+            <div class="stars">★★★★☆</div>
+            <p class="rating">Rating: 3.9</p>
+            <button class="details-button">Show Details</button>
+        </div>
+    </div>
 
-            <div class="product-card">
-                <div class="product-image">
-                    <div class="product-image-placeholder">
-                        <div><img src=" ./New folder/OIP5.jpg" alt="Fjaliraven"></div>
-                    </div>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Mens Cotton</h3>
-                    <p class="product-category">Men's Clothing</p>
-                    <p class="product-price">109.95 $</p>
-                    <div class="product-rating">
-                        <div class="stars">★★★★☆</div>
-                        <span class="rating-value">3.9</span>
-                    </div>
-                    <button class="btn-details">Show Details</button>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <div class="product-image-placeholder">
-                        <img src="./New folder/OIP.webp" alt="Mens Casual">
-                    </div>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Mens Casual</h3>
-                    <p class="product-category">Men's Clothing</p>
-                    <p class="product-price">22.3 $</p>
-                    <div class="product-rating">
-                        <div class="stars">★★★★☆</div>
-                        <span class="rating-value">4.1</span>
-                    </div>
-                    <button class="btn-details">Show Details</button>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <div class="product-image-placeholder">👕</div>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Mens Cotton</h3>
-                    <p class="product-category">Men's Clothing</p>
-                    <p class="product-price">55.99 $</p>
-                    <div class="product-rating">
-                        <div class="stars">★★★★★</div>
-                        <span class="rating-value">4.7</span>
-                    </div>
-                    <button class="btn-details">Show Details</button>
-                </div>
-            </div>
-             <div class="product-card">
-                <div class="product-image">
-                    <div class="product-image-placeholder">
-                        <div><img src=" ./New folder/OIP5.jpg" alt="Fjaliraven"></div>
-                    </div>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Mens Cotton</h3>
-                    <p class="product-category">Men's Clothing</p>
-                    <p class="product-price">109.95 $</p>
-                    <div class="product-rating">
-                        <div class="stars">★★★★☆</div>
-                        <span class="rating-value">3.9</span>
-                    </div>
-                    <button class="btn-details">Show Details</button>
-                </div>
-            </div>
-             <div class="product-card">
-                <div class="product-image">
-                    <div class="product-image-placeholder">
-                        <div><img src=" ./New folder/OIP5.jpg" alt="Fjaliraven"></div>
-                    </div>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Mens Cotton</h3>
-                    <p class="product-category">Men's Clothing</p>
-                    <p class="product-price">109.95 $</p>
-                    <div class="product-rating">
-                        <div class="stars">★★★★☆</div>
-                        <span class="rating-value">3.9</span>
-                    </div>
-                    <button class="btn-details">Show Details</button>
-                </div>
-            </div>
-             <div class="product-card">
-                <div class="product-image">
-                    <div class="product-image-placeholder">
-                        <div><img src="./New folder/th4.jpg"></div>
-                    </div>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Mens Cotton</h3>
-                    <p class="product-category">Men's Clothing</p>
-                    <p class="product-price">109.95 $</p>
-                    <div class="product-rating">
-                        <div class="stars">★★★★☆</div>
-                        <span class="rating-value">3.9</span>
-                    </div>
-                    <button class="btn-details">Show Details</button>
-                </div>
-            </div>
-             <div class="product-card">
-                <div class="product-image">
-                    <div class="product-image-placeholder">
-                        <div><img src=" ./New folder/OIP5.jpg" alt="Fjaliraven"></div>
-                    </div>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Mens Cotton</h3>
-                    <p class="product-category">Men's Clothing</p>
-                    <p class="product-price">109.95 $</p>
-                    <div class="product-rating">
-                        <div class="stars">★★★★☆</div>
-                        <span class="rating-value">3.9</span>
-                    </div>
-                    <button class="btn-details">Show Details</button>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <div class="product-image-placeholder">
-                        <div><img src="./New folder/th.webp"></div>
-                    </div>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Mens Casual</h3>
-                    <p class="product-category">Men's Clothing</p>
-                    <p class="product-price">15.99 $</p>
-                    <div class="product-rating">
-                        <div class="stars">★★☆☆☆</div>
-                        <span class="rating-value">2.1</span>
-                    </div>
-                    <button class="btn-details">Show Details</button>
-                </div>
-            </div>
+    <div class="product-card">
+        <img src="./New folder/OIP.webp" alt="Mens Casual T-shirt">
+        <div class="product-info">
+            <h3>Casual</h3>
+            <p class="category">men's clothing</p>
+            <p class="price">22.3 $</p>
+            <div class="stars">★★★★☆</div>
+            <p class="rating">Rating: 4.1</p>
+            <button class="details-button">Show Details</button>
         </div>
     </div>
     
-    <footer>
-        <p>© 2025 Men's Clothing Collection. All rights reserved.</p>
-    </footer>
+    </div><div class="product-grid-container">
+    <div class="product-card">
+        <img src="./New folder/th.webp" alt="Hoodie">
+        <div class="product-info">
+            <h3>Hoodie</h3>
+            <p class="category">men's clothing</p>
+            <p class="price">59 $</p>
+            <div class="stars">★★★★☆</div>
+            <p class="rating">Rating: 3.9</p>
+            <button class="details-button">Show Details</button>
+        </div>
+    </div>
+
+    <div class="product-card">
+        <img src="./New folder/OIP5.jpg" alt="Hoodie">
+        <div class="product-info">
+            <h3>Hoodie</h3>
+            <p class="category">men's clothing</p>
+            <p class="price">25 $</p>
+            <div class="stars">★★☆☆☆</div>
+            <p class="rating">Rating: 3.1</p>
+            <button class="details-button">Show Details</button>
+        </div>
+    </div>
+</div>
 </body>
 </html>
