--- a/task6/index.html
+++ b/task6/index.html
@@ -13,9 +13,9 @@
             <h1>Men's Clothing Collection</h1>
             <p class="subtitle">online-Men-Shopping</p>
         </header>
-        <div class="product-grid-container">
+<div class="product-grid-container">
     <div class="product-card">
-        <img src="./New folder/th4.jpg" alt="Fjallraven Bag">
+        <img src="./New folder/OIP (3).webp" alt="Sutis">
         <div class="product-info">
             <h3>Sutis</h3>
             <p class="category">men's clothing</p>
@@ -27,7 +27,7 @@
     </div>
 
     <div class="product-card">
-        <img src="./New folder/OIP.webp" alt="Mens Casual T-shirt">
+        <img src="./New folder/OIP (7).webp" alt="Mens Casual T-shirt">
         <div class="product-info">
             <h3>Casual</h3>
             <p class="category">men's clothing</p>
@@ -38,9 +38,50 @@
         </div>
     </div>
     
-    </div><div class="product-grid-container">
     <div class="product-card">
-        <img src="./New folder/th.webp" alt="Hoodie">
+        <img src="./New folder/OIP (6).webp" alt="Hoodie">
+        <div class="product-info">
+            <h3>Hoodie</h3>
+            <p class="category">men's clothing</p>
+            <p class="price">59 $</p>
+            <div class="stars">★★★★☆</div>
+            <p class="rating">Rating: 3.9</p>
+            <button class="details-button">Show Details</button>
+        </div>
+    </div>
+     <div class="product-card">
+        <img src="./New folder/OIP (11).webp" alt="Hoodie">
+        <div class="product-info">
+            <h3>Hoodie</h3>
+            <p class="category">men's clothing</p>
+            <p class="price">59 $</p>
+            <div class="stars">★★★★☆</div>
+            <p class="rating">Rating: 3.9</p>
+            <button class="details-button">Show Details</button>
+        </div>
+    </div> <div class="product-card">
+        <img src="./New folder/OIP (1).webp" alt="Hoodie">
+        <div class="product-info">
+            <h3>Hoodie</h3>
+            <p class="category">men's clothing</p>
+            <p class="price">59 $</p>
+            <div class="stars">★★★★☆</div>
+            <p class="rating">Rating: 3.9</p>
+            <button class="details-button">Show Details</button>
+        </div>
+    </div>
+     <div class="product-card">
+        <img src="./New folder/OIP (4).webp" alt="Hoodie">
+        <div class="product-info">
+            <h3>Hoodie</h3>
+            <p class="category">men's clothing</p>
+            <p class="price">59 $</p>
+            <div class="stars">★★★★☆</div>
+            <p class="rating">Rating: 3.9</p>
+            <button class="details-button">Show Details</button>
+        </div>
+    </div> <div class="product-card">
+        <img src="./New folder/OIP (5).webp" alt="Hoodie">
         <div class="product-info">
             <h3>Hoodie</h3>
             <p class="category">men's clothing</p>
@@ -52,7 +93,7 @@
     </div>
 
     <div class="product-card">
-        <img src="./New folder/OIP5.jpg" alt="Hoodie">
+        <img src="./New folder/OIP (9).webp" alt="Hoodie">
         <div class="product-info">
             <h3>Hoodie</h3>
             <p class="category">men's clothing</p>
