--- a/task6/index.html
+++ b/task6/index.html
@@ -15,9 +15,9 @@
         </header>
 <div class="product-grid-container">
     <div class="product-card">
-        <img src="./New folder/OIP (3).webp" alt="Sutis">
+        <img src="./New folder/OIP (3).webp" alt="jalabiya">
         <div class="product-info">
-            <h3>Sutis</h3>
+            <h3>jalabiya</h3>
             <p class="category">men's clothing</p>
             <p class="price">109.95 $</p>
             <div class="stars">★★★★☆</div>
@@ -27,9 +27,9 @@
     </div>
 
     <div class="product-card">
-        <img src="./New folder/OIP (7).webp" alt="Mens Casual T-shirt">
+        <img src="./New folder/OIP (7).webp" alt="jalabiya">
         <div class="product-info">
-            <h3>Casual</h3>
+            <h3>jalabiya</h3>
             <p class="category">men's clothing</p>
             <p class="price">22.3 $</p>
             <div class="stars">★★★★☆</div>
@@ -39,9 +39,9 @@
     </div>
     
     <div class="product-card">
-        <img src="./New folder/OIP (6).webp" alt="Hoodie">
+        <img src="./New folder/OIP (6).webp" alt="jalabiya">
         <div class="product-info">
-            <h3>Hoodie</h3>
+            <h3>jalabiya</h3>
             <p class="category">men's clothing</p>
             <p class="price">59 $</p>
             <div class="stars">★★★★☆</div>
@@ -50,9 +50,9 @@
         </div>
     </div>
      <div class="product-card">
-        <img src="./New folder/OIP (11).webp" alt="Hoodie">
+        <img src="./New folder/OIP (11).webp" alt="jalabiya">
         <div class="product-info">
-            <h3>Hoodie</h3>
+            <h3>jalabiya</h3>
             <p class="category">men's clothing</p>
             <p class="price">59 $</p>
             <div class="stars">★★★★☆</div>
@@ -60,9 +60,9 @@
             <button class="details-button">Show Details</button>
         </div>
     </div> <div class="product-card">
-        <img src="./New folder/OIP (1).webp" alt="Hoodie">
+        <img src="./New folder/OIP (1).webp" alt="jalabiya">
         <div class="product-info">
-            <h3>Hoodie</h3>
+            <h3>jalabiya</h3>
             <p class="category">men's clothing</p>
             <p class="price">59 $</p>
             <div class="stars">★★★★☆</div>
@@ -71,9 +71,9 @@
         </div>
     </div>
      <div class="product-card">
-        <img src="./New folder/OIP (4).webp" alt="Hoodie">
+        <img src="./New folder/OIP (4).webp" alt="jalabiya">
         <div class="product-info">
-            <h3>Hoodie</h3>
+            <h3>jalabiya</h3>
             <p class="category">men's clothing</p>
             <p class="price">59 $</p>
             <div class="stars">★★★★☆</div>
@@ -81,9 +81,9 @@
             <button class="details-button">Show Details</button>
         </div>
     </div> <div class="product-card">
-        <img src="./New folder/OIP (5).webp" alt="Hoodie">
+        <img src="./New folder/OIP (5).webp" alt="jalabiya">
         <div class="product-info">
-            <h3>Hoodie</h3>
+            <h3>jalabiya</h3>
             <p class="category">men's clothing</p>
             <p class="price">59 $</p>
             <div class="stars">★★★★☆</div>
@@ -93,9 +93,9 @@
     </div>
 
     <div class="product-card">
-        <img src="./New folder/OIP (9).webp" alt="Hoodie">
+        <img src="./New folder/OIP (9).webp" alt="jalabiya">
         <div class="product-info">
-            <h3>Hoodie</h3>
+            <h3>jalabiya</h3>
             <p class="category">men's clothing</p>
             <p class="price">25 $</p>
             <div class="stars">★★☆☆☆</div>
